[gd_scene load_steps=20 format=3 uid="uid://cfoh1qycxtqc0"]

[ext_resource type="Script" path="res://Entities/ShadowBoss/shadow_boss.gd" id="1_ckmx7"]
[ext_resource type="Texture2D" uid="uid://b26j3533xmp3a" path="res://Entities/Hero/hero-shadow.png" id="1_nfame"]
[ext_resource type="PackedScene" uid="uid://2nfy1ysxtck8" path="res://Entities/HitBox/damage_receiver_area.tscn" id="3_1tsox"]
[ext_resource type="PackedScene" uid="uid://b5mhaodm6g8i5" path="res://Entities/HitBox/damage_dealer_area.tscn" id="4_dnlk8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wy76p"]
size = Vector2(14, 8)

[sub_resource type="Animation" id="Animation_ogkf1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DamageDealerArea:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_p55ba"]
resource_name = "attack"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"on_finish_attack"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DamageDealerArea:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_djeat"]
resource_name = "cast"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [140]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"on_finish_casting"
}]
}

[sub_resource type="Animation" id="Animation_h5u7u"]
resource_name = "dead"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [101]
}

[sub_resource type="Animation" id="Animation_inubh"]
resource_name = "dying"
length = 0.4
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [100, 101]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"on_finish_dying"
}]
}

[sub_resource type="Animation" id="Animation_fajye"]
resource_name = "hurt"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [90, 91, 92, 93, 94]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"on_finish_hurt"
}]
}

[sub_resource type="Animation" id="Animation_06l2p"]
resource_name = "idle"
length = 0.6
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_vbv65"]
resource_name = "jump"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [20]
}

[sub_resource type="Animation" id="Animation_luc3a"]
resource_name = "land"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [22]
}

[sub_resource type="Animation" id="Animation_0ohwy"]
resource_name = "run"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [10, 11, 12]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gnt4g"]
_data = {
"RESET": SubResource("Animation_ogkf1"),
"attack": SubResource("Animation_p55ba"),
"cast": SubResource("Animation_djeat"),
"dead": SubResource("Animation_h5u7u"),
"dying": SubResource("Animation_inubh"),
"hurt": SubResource("Animation_fajye"),
"idle": SubResource("Animation_06l2p"),
"jump": SubResource("Animation_vbv65"),
"land": SubResource("Animation_luc3a"),
"run": SubResource("Animation_0ohwy")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_keqtt"]
size = Vector2(26, 23)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nxrvf"]
size = Vector2(11, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wtn0v"]
size = Vector2(24, 10.375)

[node name="ShadowBoss" type="CharacterBody2D"]
collision_layer = 16
script = ExtResource("1_ckmx7")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_nfame")
centered = false
offset = Vector2(-24, -32)
hframes = 10
vframes = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_wy76p")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_gnt4g")
}

[node name="PlayerInReachArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerInReachArea"]
position = Vector2(11, -13.5)
shape = SubResource("RectangleShape2D_keqtt")

[node name="DamageReceiverArea" parent="." instance=ExtResource("3_1tsox")]
position = Vector2(-4, -21)
collision_layer = 256

[node name="CollisionShape2D" parent="DamageReceiverArea" index="0"]
position = Vector2(3.5, 6.5)
shape = SubResource("RectangleShape2D_nxrvf")

[node name="DamageDealerArea" parent="." instance=ExtResource("4_dnlk8")]
collision_layer = 128
monitoring = false
damage = 1

[node name="CollisionShape2D" parent="DamageDealerArea" index="0"]
position = Vector2(12, -14.1875)
shape = SubResource("RectangleShape2D_wtn0v")

[editable path="DamageReceiverArea"]
[editable path="DamageDealerArea"]
